[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "probrank"
version = "0.1.0"
description = "Calibrated hypothesis test for the rank of a probability matrix estimated from multinomial samples."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Bijan Mazaheri" },
]
keywords = [
    "rank test",
    "probability matrix",
    "multinomial",
    "hypothesis test",
    "conditional independence",
    "causal discovery",
]
dependencies = [
    "numpy>=1.25",
    "scipy>=1.10",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/honeybijan/causal_discovery_mixtures"
Repository = "https://github.com/honeybijan/causal_discovery_mixtures"

[tool.setuptools.packages.find]
where = ["src"]
